--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <b>GET YOUR DESIRED CAR IN RESONABLE PRICE</b>
             </h2>
             <p>
-                It is important to take care of the pain itself, and it will be followed by the growth <br> of the patient, but at the same time it will happen that there is a lot of work and <br> pain.
+                It's important to take care of the pain itself, and it will be followed by the growth <br> of the patient, but at the same time it will happen that there is a lot of work and <br> pain.
             </p>
             <button>Contact Us</button>
         </div>
